Fix search text <> background contrast

--- a/source/stylesheets/turtlecoin/_styles.scss
+++ b/source/stylesheets/turtlecoin/_styles.scss
@@ -134,3 +134,9 @@ $content-edge-gutter-width: 28px;
     }
   }
 }
+
+// SEARCH
+////////////////////
+.content .search-highlight {
+  color: $gray-10; // gray against yellow
+}
